Bug 1801264 - Fix cyclic counter style show incorrectly when starting from negative value. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D167686